iptables/dmit-hk/iptables.conf
# Generated by iptables-save v1.8.7 on Sat Oct 22 00:15:49 2022
*mangle
:PREROUTING ACCEPT [3448821:6408543725]
:INPUT ACCEPT [3448821:6408543725]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2066652:6344811187]
:POSTROUTING ACCEPT [2066652:6344811187]
-A PREROUTING -p tcp -j TOS --set-tos 0x10/0xff
-A PREROUTING -p udp -m udp --sport 53 -j TOS --set-tos 0x04/0xff
COMMIT
# Completed on Sat Oct 22 00:15:49 2022
# Generated by iptables-save v1.8.7 on Sat Oct 22 00:15:49 2022
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2066652:6344811187]
:xray - [0:0]
-A INPUT -j xray
-A INPUT -s 117.136.87.0/24 -p tcp -m tcp --dport 1443 -j ACCEPT
-A INPUT -s 117.136.87.0/24 -p tcp -m tcp --dport 1444 -j ACCEPT
-A INPUT -s 111.18.0.0/16 -p tcp -m tcp --dport 1444 -j ACCEPT
-A INPUT -s 111.19.46.0/24 -p tcp -m tcp --dport 1443 -j ACCEPT
-A INPUT -s 111.18.0.0/16 -p tcp -m tcp --dport 1443 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 2023:31023 -j LOG --log-prefix "udp not 2023:31023 port: "
-A INPUT -i eth0 -p udp -m udp --dport 2023:31023 -j DROP
-A INPUT -i eth0 -p udp -m udp --dport 444:2021 -j LOG --log-prefix "udp not 444:2021 port: "
-A INPUT -i eth0 -p udp -m udp --dport 444:2021 -j DROP
-A INPUT -i eth0 -p udp -m udp --dport 1:443 -j LOG --log-prefix "udp not 1:442 port: "
-A INPUT -i eth0 -p udp -m udp --dport 1:443 -j DROP
-A INPUT -i eth0 -p tcp -m tcp --dport 2023:31023 -j LOG --log-prefix "not 2023:31023 port: "
-A INPUT -i eth0 -p tcp -m tcp --dport 2023:31023 -j DROP
-A INPUT -i eth0 -p tcp -m tcp --dport 444:2021 -j LOG --log-prefix "not 444:2021 port: "
-A INPUT -i eth0 -p tcp -m tcp --dport 444:2021 -j DROP
-A INPUT -i eth0 -p tcp -m tcp --dport 1:442 -j LOG --log-prefix "not 1:442 port: "
-A INPUT -i eth0 -p tcp -m tcp --dport 1:442 -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j LOG --log-prefix "Iptables deny icmp: "
-A INPUT -p icmp -j DROP
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2022 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -p tcp -j ACCEPT
-A INPUT -s 111.19.46.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 111.18.0.0/16 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 117.136.87.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -j xray
-A INPUT -s 59.55.137.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 43.136.5.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 36.158.253.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 219.144.89.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 219.144.88.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 121.51.60.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 121.51.180.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 121.51.159.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 121.51.15.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 121.51.117.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 117.44.77.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 117.162.61.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 117.162.51.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 116.162.152.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 116.153.85.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 116.153.83.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.96.246.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.219.202.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.201.154.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.200.123.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 111.20.29.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 111.20.28.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 101.91.91.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j LOG --log-prefix "deny not cdn ip: "
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -p tcp -m tcp --dport 31024:65000 -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN,ACK -m state --state NEW -j LOG --log-prefix "deny: (SYN,ACK new)"
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN,ACK -m state --state NEW -j DROP
-A INPUT -p icmp -j LOG --log-prefix "Iptables deny icmp: "
-A INPUT -p icmp -j DROP
-A INPUT -j xray
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1000/sec -j LOG --log-prefix "Iptables deny (--syn limit100"
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1000/sec -j ACCEPT
-A INPUT -j LOG --log-prefix "deny rest port"
-A INPUT -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec -j LOG --log-prefix "Iptables deny syn: "
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j LOG --log-prefix "Iptables deny echo-request: "
-A FORWARD -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -m limit --limit 1/sec -j LOG --log-prefix "Iptables deny (SYN,ACK,FIN,RS"
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -m limit --limit 1/sec -j ACCEPT
-A xray -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j LOG --log-prefix "Iptables deny (ALL SYN,RST,AC"
-A xray -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
-A xray -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j LOG --log-prefix "Iptables deny (ALL ALL): "
-A xray -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A xray -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j LOG --log-prefix "Iptables deny ALL FIN,URG,PSH"
-A xray -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A xray -i eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j LOG --log-prefix "Iptables deny SYN,RST SYN,RST"
-A xray -i eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A xray -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j LOG --log-prefix "Iptables deny SYN,FIN SYN,FIN"
-A xray -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A xray -p icmp -j LOG --log-prefix "Iptables deny icmp: "
-A xray -p icmp -j DROP
COMMIT
# Completed on Sat Oct 22 00:15:49 2022
